# Build ocmarkdown GTK library (libocmarkdowngtk.so) - depends on ocmarkdown base library
# We'll generate VAPI manually via custom_target to control command line order
# Meson will generate a VAPI with default name 'ocmarkdowngtk.vapi', but we override it
# by generating our own via custom_target. The meson-generated one won't be used.

# Dependencies for ocmarkdowngtk library
valac = meson.get_compiler('vala')
ocmarkdowngtk_deps = [
  dependency('gtk4'),
  dependency('gtksourceview-5'),
  dependency('gee-0.8'),
  dependency('gio-2.0'),
  dependency('glib-2.0'),
  dependency('gobject-2.0'),
  dependency('json-glib-1.0'),
  dependency('libsoup-3.0'),
  dependency('libxml-2.0'),
  valac.find_library('posix'),
]

ocmarkdowngtk_src = files([
  'Render.vala',
  'RenderSourceView.vala',
  'State.vala',
  'TopState.vala',
  'Table.vala',
  'TableCell.vala',
])

# Build rpath for libraries to find each other in build directory
lib_build_rpath = ':'.join([
  meson.current_build_dir(),
  meson.current_build_dir() / '..' / 'libocsqlite',
  meson.current_build_dir() / '..' / 'libocmarkdown',
  meson.current_build_dir() / '..' / 'libollmchat',
  meson.current_build_dir() / '..' / 'libollmchatgtk'
])

ocmarkdowngtk_lib = library('ocmarkdowngtk',
  dependencies: ocmarkdowngtk_deps,
  sources: ocmarkdowngtk_src,
  vala_header: 'ocmarkdowngtk.h',
  vala_vapi: 'ocmarkdowngtk-meson.vapi',  # Use different name so our custom_target can use 'ocmarkdowngtk.vapi'
  link_with: [ocmarkdown_base_lib],
  include_directories: include_directories('../libocmarkdown'),  # Include ocmarkdown headers from build directory
  build_rpath: lib_build_rpath,
  install: true
)

# Manually generate ocmarkdowngtk.vapi with correct command line order
# --vapidir and --pkg flags come before source files, ensuring packages load first
# Note: We only generate the VAPI file here - the header is generated by ocmarkdowngtk_lib
ocmarkdowngtk_vapi = custom_target('ocmarkdowngtk-vapi',
  output: 'ocmarkdowngtk.vapi',
  input: ocmarkdowngtk_src,
  depends: [ocmarkdown_vapi, ocmarkdowngtk_lib],  # Ensure dependencies are built
  command: [
    valac_exe,
    '-C', '--debug',
    '--target-glib=auto',
    '--vapidir', meson.current_source_dir() / '../vapi',
    '--vapidir', meson.current_source_dir() / '../../vapi',
    '--vapidir', meson.current_build_dir(),
    '--vapidir', meson.current_build_dir() / '..' / 'libocmarkdown',  # For ocmarkdown.vapi
    '--pkg', 'posix',
    '--pkg', 'libxml-2.0',
    '--pkg', 'libsoup-3.0',
    '--pkg', 'json-glib-1.0',
    '--pkg', 'gobject-2.0',
    '--pkg', 'glib-2.0',
    '--pkg', 'gio-2.0',
    '--pkg', 'gee-0.8',
    '--pkg', 'gtksourceview-5',
    '--pkg', 'gtk4',
    '--pkg', 'ocmarkdown',  # Package flag comes before source files
    '--library', 'ocmarkdowngtk',
    '--header', meson.current_build_dir() / 'ocmarkdowngtk.h',  # Use header from library
    '--vapi', '@OUTPUT@',
    '@INPUT@'
  ],
  build_by_default: true,
  install: true,
  install_dir: get_option('datadir') / 'vala' / 'vapi'
)

# Create a dependency that includes the VAPI files to ensure build order
ocmarkdowngtk_vapi_dep = declare_dependency(
  link_args: ['-L' + meson.current_build_dir(), '-locmarkdowngtk'],
  sources: [ocmarkdowngtk_vapi[0]]  # Include VAPI file to ensure it's built first
)

# GObject Introspection for ocmarkdowngtk library
# Note: Namespace is now MarkdownGtk (not OLLMchat.MarkdownGtk)
ocmarkdowngtk_header_file = meson.current_build_dir() / 'ocmarkdowngtk.h'
ocmarkdowngtk_gir = gnome.generate_gir(ocmarkdowngtk_lib,
  namespace: 'OCMarkdownGtk',
  nsversion: '1.0',
  identifier_prefix: 'MarkdownGtk',
  symbol_prefix: 'markdown_gtk',
  sources: [ocmarkdowngtk_header_file],
  link_with: [ocmarkdown_base_lib],
  extra_args: [
    '--extra-library=ocmarkdown',
    '--accept-unprefixed'
  ],
  includes: ['GObject-2.0', 'Gio-2.0', 'Gtk-4.0', 'Gee-0.8', ocmarkdown_gir[0]],
  install: true,
  fatal_warnings: false
)
