# Build ocsqlite library (libocsqlite.so) - no GTK dependencies
# We'll generate VAPI manually via custom_target to control command line order
# Meson will generate a VAPI with default name 'ocsqlite.vapi', but we override it
# by generating our own via custom_target. The meson-generated one won't be used.
#
# NOTE: If you add/remove/change source files in this directory, you MUST also
# update docs/meson.build to include the same files in the valadoc input list.

# Dependencies for ocsqlite library
valac = meson.get_compiler('vala')
ocsqlite_deps = [
  dependency('gee-0.8'),
  dependency('gio-2.0'),
  dependency('glib-2.0'),
  dependency('gobject-2.0'),
  dependency('sqlite3'),
  valac.find_library('posix'),
]

ocsqlite_src = files([
  'Database.vala',
  'Query.vala',
  'Schema.vala',
])

# Build rpath for libraries to find each other in build directory
lib_build_rpath = ':'.join([
  meson.current_build_dir(),
  meson.current_build_dir() / '..' / 'libocmarkdown',
  meson.current_build_dir() / '..' / 'libocmarkdowngtk',
  meson.current_build_dir() / '..' / 'libollmchat',
  meson.current_build_dir() / '..' / 'libollmchatgtk'
])

ocsqlite_base_lib = library('ocsqlite',
  dependencies: ocsqlite_deps,
  sources: ocsqlite_src,
  vala_header: 'ocsqlite.h',
  vala_vapi: 'ocsqlite-meson.vapi',  # Use different name so our custom_target can use 'ocsqlite.vapi'
  vala_args: ['--pkg=sqlite3'],
  build_rpath: lib_build_rpath,
  install: true
)

# Manually generate ocsqlite.vapi with correct command line order
# This replicates the Makefile approach and bypasses meson's determine_dep_vapis()
# Note: We only generate the VAPI file here - the header is generated by ocsqlite_base_lib
ocsqlite_vapi = custom_target('ocsqlite-vapi',
  output: 'ocsqlite.vapi',
  input: ocsqlite_src,
  command: [
    valac_exe,
    '-C', '--debug',
    '--target-glib=auto',
    '--vapidir', meson.current_source_dir() / '../vapi',
    '--vapidir', meson.current_source_dir() / '../../vapi',
    '--vapidir', meson.current_build_dir(),
    '--pkg', 'posix',
    '--pkg', 'sqlite3',
    '--pkg', 'gobject-2.0',
    '--pkg', 'glib-2.0',
    '--pkg', 'gio-2.0',
    '--pkg', 'gee-0.8',
    '--library', 'ocsqlite',
    '--header', meson.current_build_dir() / 'ocsqlite.h',  # Use header from library
    '--vapi', '@OUTPUT@',
    '@INPUT@'
  ],
  depends: [ocsqlite_base_lib],  # Ensure library is built first (so header exists)
  build_by_default: true,
  install: true,
  install_dir: get_option('datadir') / 'vala' / 'vapi'
)

# Create a dependency that includes the VAPI file to ensure build order
# Use link_args instead of link_with to prevent meson from auto-including ocsqlite-meson.vapi
# The -locsqlite in link_args will cause meson to build the library
# We also need to ensure the library is built, so we depend on it indirectly
ocsqlite_vapi_dep = declare_dependency(
  link_args: ['-L' + meson.current_build_dir(), '-locsqlite'],
  sources: [ocsqlite_vapi[0]],  # Include VAPI file to ensure it's built first
  dependencies: [dependency('sqlite3')]  # Ensure sqlite3 is linked
)

# GObject Introspection for ocsqlite library
ocsqlite_gir = gnome.generate_gir(ocsqlite_base_lib,
  namespace: 'OCSqlite',
  nsversion: '1.0',
  identifier_prefix: 'SQ',
  symbol_prefix: 'sq',
  includes: ['GObject-2.0', 'Gio-2.0'],
  install: true,
  fatal_warnings: false
)
